src/styles/globals.scss
@import "~normalize.css/normalize.css";
@import "types";
@import "vars";
@import "mixins";
@import "grid";

:root {
	--col-gutter-x: 1rem;
	--col-gutter-y: 0rem;
	@include mediaOver("md") {
		--col-gutter-x: 1.5rem;
		--col-gutter-y: 0rem;
	}
}
html {
	font-size: 62.5%;
}
body {
	padding: 0;
	margin: 0;
	--main-margin-x: 1.5rem;
	-webkit-font-smoothing: antialiased;
	-moz-osxfont-smoothing: grayscale;
	@include mediaOver("lg") {
		--main-margin-x: 3%;
	}
	&.userNavigation-keyboard *:focus {
		box-shadow: $focusShadow;
		border-radius: $br-common;
		transition: boxShadow 0.3s;
	}
	*:focus {
		outline: none;
	}
}
* {
	box-sizing: border-box;
}
#__next {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
	position: relative;
}
#__next {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
	position: relative;
}
p {
	margin: 0 0 2rem;
	margin: 0 0 2rem;
}
svg,
img {
	display: block;
}
.d {
	&-none {
		display: none;
	}
	&-flex {
		display: flex;
	}
	&-inline {
		display: inline;
	}
	@include mediaOver("md") {
		&-md {
			&-flex {
				display: flex;
			}
			&-none {
				display: none;
			}
			&-block {
				display: block;
			}
		}
	}
	@include mediaOver("lg") {
		&-lg {
			&-block {
				display: block;
			}
			&-flex {
				display: flex;
			}
		}
	}
}
.flex {
	&-column {
		flex-direction: column;
	}
	&-column-reverse {
		flex-direction: column-reverse;
	}
	&-shrink {
		&-1 {
			flex-shrink: 1;
		}
	}
	&-nowrap {
		flex-wrap: nowrap;
	}
	@include mediaOver("md") {
		&-md {
			&-row {
				flex-direction: row;
			}
		}
	}
}
.order {
	@include mediaOver("lg") {
		&-lg {
			&-1 {
				order: 1;
			}
		}
	}
}
.justify-content {
	&-between {
		justify-content: space-between;
	}
	&-end {
		justify-content: end;
	}
	&-center {
		justify-content: center;
	}
	@include mediaOver("md") {
		&-md {
			&-end {
				justify-content: end;
			}
		}
	}
}
.align {
	&-center {
		align-items: center;
	}
	&-self {
		&-end {
			align-self: flex-end;
		}
	}
}
.h {
	&-100 {
		height: 100%;
	}
	&-auto {
		height: auto;
	}
	@include mediaOver("lg") {
		&-lg {
			&-100 {
				height: 100%;
			}
		}
	}
}
.w {
	&-50 {
		width: 50%;
	}
	&-100 {
		width: 100%;
	}
	&-auto {
		width: auto;
	}
}
button {
	background-color: transparent;
	border: none;
	color: inherit;
	padding: 0;
	cursor: pointer;
	&.link-text {
		text-decoration: underline !important;
		border: none !important;
	}
}
.ul {
	&-noStyle {
		list-style: none;
		padding-left: 0;
		ul {
			padding-left: 1rem;
		}
	}
	&-twoCols {
		column-count: 2;
	}
}
li:not(:last-of-type) {
	margin-bottom: 0.7rem;
}
a {
	display: inline-block;
}
@include spacing();
.ar {
	&-1 {
		aspect-ratio: 1;
	}
}
.position {
	&-relative {
		position: relative;
	}
	&-absolute {
		position: absolute;
	}
	&-fixed {
		position: fixed;
	}
}
.dropdownParent {
	position: relative;
	padding: 0.6rem 0;
	.dropdownChildren {
		display: none;
		position: absolute;
		flex-direction: column;
		min-width: 130%;
		width: auto;
		padding: 1rem;
		background-color: $color-white;
		border-radius: $br-common;
		margin-top: 0.5rem;
		ul {
			padding: 0;
		}
		&-flushRight {
			left: unset;
			right: 0;
		}
	}
	&:hover,
	&:focus {
		.dropdownChildren {
			display: flex;
		}
	}
}
.lh {
	&-1 {
		line-height: 1;
	}
}
label {
	line-height: initial;
	margin-bottom: 0.5rem;
	display: block;
	text-align: left;
}
input,
textarea,
select {
	width: 100%;
	border: 1px solid $color-primary-tertiary;
	padding: 0.8rem;
	margin-bottom: $spacing-2;
	max-width: 100%;
	transition: 0.3s;
	line-height: 1;
	&:hover {
		background-color: $color-focused-light;
	}
	&:focus {
		border-color: $color-primary-primary;
	}
}
textarea {
	min-height: calc(4em + 2rem);
	min-width: 100%;
}
.bg {
	&-primary-primary {
		background-color: $color-primary-primary !important;
	}
	&-primary-secondary {
		background-color: $color-primary-secondary !important;
	}
	&-primary-tertiary {
		background-color: $color-primary-tertiary !important;
	}
	&-primary-quaternary {
		background-color: $color-primary-quaternary !important;
	}
	&-secondary-quaternary {
		background-color: $color-secondary-quaternary !important;
	}
	&-white {
		background-color: $color-white !important;
	}
	&-lightGray {
		background-color: $color-lightGray !important;
	}
	&-gray {
		background-color: $color-gray !important;
	}
}
.bc {
	&-primary-quaternary {
		border-color: $color-primary-quaternary !important;
	}
	&-gray {
		border-color: $color-gray !important;
	}
	&-transparent {
		border-color: transparent !important;
	}
}
.border {
	&-none {
		border: none !important;
	}
}
section {
	padding: $spacing-5 0;
}
hr {
	background-color: $color-primary-primary;
	border: none;
	height: 1px;
}
.hideElement-accessible {
	border: 0;
	clip: rect(1px 1px 1px 1px);
	clip: rect(1px, 1px, 1px, 1px);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}
.overflow {
	&-hidden {
		overflow: hidden;
	}
	&-scroll {
		overflow: scroll !important;
	}
	&-y {
		&-scroll {
			overflow-y: scroll !important;
		}
	}
	&-visible {
		overflow: visible !important;
	}
}
.sticky {
	position: sticky;
	z-index: 9999999;
}
.top-0 {
	top: 0 !important;
}
.bottom-0 {
	bottom: 0 !important;
}
table {
	line-height: initial;
	border-collapse: collapse;
	width: 100%;
	thead {
		border-bottom: 1px solid $color-primary-primary;
	}
	td,
	th {
		padding: 1rem 3rem;
		padding-left: 0;
		text-align: left;
		white-space: nowrap;
		@include mediaOver("md") {
			white-space: unset;
		}
		&:last-of-type {
			padding-right: 0;
		}
	}
	&.table-verticalBorder {
		td,
		th {
			padding: 1rem 2rem 1rem 1rem;
			border-right: 1px solid darken($color-gray, 10%);
			&:first-of-type {
				padding-left: 0;
			}
			&:last-of-type {
				border-right: none;
			}
		}
		tr:last-of-type {
			border-bottom: 1px solid darken($color-gray, 10%);
		}
	}
	tr:not(:last-of-type) {
		border-bottom: 1px solid darken($color-gray, 10%);
	}
	caption {
		@extend .hideElement-accessible;
	}
}
.white-space {
	&-nowrap {
		white-space: nowrap;
	}
	&-unset {
		white-space: unset;
	}
}
.showScrollbar {
	&-vertical {
		&::-webkit-scrollbar {
			-webkit-appearance: none;
			width: 0px;
			height: 3px;
		}
		&::-webkit-scrollbar-thumb {
			background-color: rgba(0, 0, 0, 0.15);
			border-radius: 500px;
		}
		@include mediaOver("md") {
			&::-webkit-scrollbar {
				height: 5px;
			}
		}
	}
}
.grecaptcha-badge {
	display: none !important;
}

